Bug 334527 - Automatic filling of the movie does not always work with allocine.fr
Summary: Automatic filling of the movie does not always work with allocine.fr
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3.8
Platform: Mageia RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-08 20:23 UTC by Olivier Delaune
Modified: 2014-05-26 00:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier Delaune 2014-05-08 20:23:06 UTC
Hello, 
sometimes I cannot fill automatically the informations of a movie using allocine.fr although the website has a page for the movie. For example, if you create an entry with the name "Maman, j'ai encore raté l'avion", then using allocine.fr to get some informations on the movie gives no result
However, the webpage exists (http://www.allocine.fr/film/fichefilm_gen_cfilm=5940.html)
I guess the fact that no result is returned comes from some "exotic" characters (comme, apostrophe, diacritics?)


Reproducible: Always
Comment 1 Robby Stephenson 2014-05-26 00:03:30 UTC
Git commit efea772ba2881d34e7330e54d6937004716f8607 by Robby Stephenson.
Committed on 26/05/2014 at 00:01.
Pushed by rstephenson into branch '2.3'.

Fix character encoding in Allocine fetcher for commas and apostrophes

Removing the commas and replacing apostrophes with spaces seems to
provide appropriate results. Go ahead and remove accents marks, too,
since that also doesn't seem to matter
FIXED-IN: 2.3.9

M  +5    -1    ChangeLog
M  +6    -1    src/fetch/allocinefetcher.cpp
M  +1    -1    src/tests/allocinefetchertest.cpp

http://commits.kde.org/tellico/efea772ba2881d34e7330e54d6937004716f8607