Fix character encoding in Allocine fetcher for commas and apostrophes

Removing the commas and replacing apostrophes with spaces seems to
provide appropriate results. Go ahead and remove accents marks, too,
since that also doesn't seem to matter

BUG: 334527
FIXED-IN: 2.3.9